what works? a unit test that backs up to spreadsheet, deletes everything, and restores from spreadsheet, that's what.

--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -1,6 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}GoodCloud Features - how GoodCloud can help your nonprofit.{% endblock %}
+{% block title %}Tour - see GoodCloud in action, and what motivates our team!{% endblock %}
 
 {% block page_content %}
 <div class="page_header">Watch it in action</div>
