import is abstracted, importable fields are specified, and trickle through to the JS properly.

--- a/mycelium/apps/data_import/templates/data_import/review.html
+++ b/mycelium/apps/data_import/templates/data_import/review.html
@@ -1,4 +1,4 @@
-{% extends "import/base.html" %}
+{% extends "data_import/base.html" %}
 {% load humanize %}
 {% block title %}Data Import - Review Import #5 on Dec 29, 2010{% endblock %}
 {% block javascript %}{{block.super}}
