--- a/mycelium/apps/data_import/templates/data_import/list.html
+++ b/mycelium/apps/data_import/templates/data_import/list.html
@@ -1,4 +1,4 @@
-{% extends "import/base.html" %}
+{% extends "data_import/base.html" %}
 {% load humanize %}
 {% block title %}Data Import - History{% endblock %}
 {% block javascript %}{{block.super}}
