--- a/mycelium/apps/data_import/templates/data_import/list.html
+++ b/mycelium/apps/data_import/templates/data_import/list.html
@@ -3,12 +3,43 @@
 {% block title %}Data Import - History{% endblock %}
 {% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
+var IMPORT_TIMEOUT = 1000;
+var active_imports = [];
+
+function check_import_status(import_id) {
+	$.ajax({
+          url: "{% url data_import:import_status %}",
+          type: "POST",
+          dataType: "json",
+          data: {"import_id":import_id},
+          mode: 'abort',
+          success: function(json) {
+          	if (!json.is_finished) {
+          		$("tr[import_id="+import_id+"] .percent_imported").html(json.percent_imported);	
+          		active_imports[import_id] = setTimeout(function(){check_import_status(import_id)}, IMPORT_TIMEOUT);
+	          } else {
+	          	window.location.reload();
+	          }
+			 
+          }
+     });
+
+	
+}
+
+$(function(){
+{% for i in all_imports %}
+	{% if not i.is_finished %}
+	active_imports[{{i.pk}}] = setTimeout(function(){check_import_status({{i.pk}})}, IMPORT_TIMEOUT);
+	{% endif %}
+{% endfor %}	
+});
 
 </script>
+
 {% endblock %}
 {% block breadcrumb %}{% endblock %}
 {% block page_content %}
-<coming_soon>We're not quite done with data import yet, but it'll be ready to go by June 1!</coming_soon>
 <page_title>Data Import History</page_title>
 
 <record_list>
@@ -17,33 +48,13 @@
 
 <table class="striped data_import_history_table record_table">
 	{% for i in all_imports %}
-	<tr {% if not i.complete %}class="in_progress"{% endif %}>
-		<td class="action">{% if i.complete %}<a href="{% url data_import:review i.pk %}">View Report</a>{% else %}<img src="{% media_url "images/spinner-grey-16.gif" %}" >{% endif %}</td>
-		<td class="import_date">{% if i.complete %}{{i.start_date|date}}{% else %}<span class="right_now"><img src="{% media_url "images/spinner-grey-16.gif" %}" >Right now</span>{% endif %}</td>
-		<td class="people_count">{% if i.complete %}importing{% else %}imported{% endif %} {{i.people|intcomma}} people</td>
-		<td class="other_fields">and 6 other fields.</td>
+	<tr {% if not i.is_finished %}class="in_progress"{% endif %} class="striped_row" import_id="{{i.pk}}">
+		<td class="action">{% if i.is_finished %}<a href="{% url data_import:review i.pk %}">View Report</a>{% else %}<img src="{% media_url "images/spinner-grey-16.gif" %}" > <span class="percent_imported">{{i.percent_imported|floatformat:1}}</span>% {% endif %}</td>
+		<td class="import_date">{% if i.is_finished %}{{i.start_time|date}} at {{i.start_time|time}}{% else %}<span class="right_now">Right now</span>{% endif %}</td>
+		<td class="people_count">{% if i.is_finished %}imported{% else %}importing{% endif %} {% if i.num_source_rows %}{{i.num_source_rows|intcomma}}{% endif %} {{i.import_type}}</td>
+		<td class="other_fields">with {{i.num_columns}}  columns.</td>
 	</tr>
 	{% endfor %}
-	<tr class="in_progress">
-		<td class="action"><img src="{% media_url "images/spinner-grey-16.gif" %}" ></td>
-		<td class="import_date"><span class="right_now">Right now</span></td>
-		<td class="people_count">importing 1,738 people </td>
-		<td class="other_fields">and 6 other fields.</td>
-	</tr>
-	<tr>
-		<td class="action"><a href="{% url data_import:review 1 %}">View Results</a></td>
-		<td class="import_date">Dec 29, 2010</td>
-		<td class="people_count">imported 428 people </td>
-		<td class="other_fields">and 28 other fields</td>
-
-	</tr>	
-	<tr>
-		<td class="action"><a href="{% url data_import:review 2 %}">View Results</a></td>
-		<td class="import_date">Nov 15, 2010</td>
-		<td class="people_count">imported 1,627 people </td>
-		<td class="other_fields">and 6 other fields.</td>
-
-	</tr>	
 </table>
 </record_list>
 {% endblock %}
