--- a/mycelium/apps/data_import/templates/data_import/list.html
+++ b/mycelium/apps/data_import/templates/data_import/list.html
@@ -50,11 +50,15 @@ $(function(){
 <table class="striped data_import_history_table record_table">
 	{% for i in all_imports %}
 	<tr {% if not i.is_finished %}class="in_progress"{% endif %} class="striped_row" import_id="{{i.pk}}">
-		<td class="action">{% if i.is_finished %}<a href="{% url data_import:review i.pk %}">View Report</a>{% else %}<img src="{% media_url "images/spinner-grey-16.gif" %}" > <span class="percent_imported">{{i.percent_imported|floatformat:1}}</span>% {% endif %}</td>
+		<td class="action">{% if i.is_finished %}<a href="{% url data_import:review i.pk %}">View Report</a>{% else %}<img src="{% media_url "images/spinner-grey-16.gif" %}" > <span class="percent_imported">{{i.percent_imported|floatformat:0}}</span>% {% endif %}</td>
 		<td class="import_date">{% if i.is_finished %}{{i.start_time|date}} at {{i.start_time|time}}{% else %}<span class="right_now">Right now</span>{% endif %}</td>
 		<td class="people_count">{% if i.is_finished %}imported{% else %}importing{% endif %} {% if i.num_source_rows %}{{i.num_source_rows|intcomma}}{% endif %} {{i.import_type}}</td>
 		<td class="other_fields">with {{i.num_columns}}  columns.</td>
 	</tr>
+	{% empty %}
+	<tr class="no_imports_message"><td>
+		No data imports yet - click the button above to get started!
+	</td></tr>
 	{% endfor %}
 </table>
 {% paginate %}
