--- a/mycelium/apps/data_import/templates/data_import/review.html
+++ b/mycelium/apps/data_import/templates/data_import/review.html
@@ -21,7 +21,7 @@
 	<div class="error">
 		<div class="result_header error_header">We did not add:</div>
 		<div class="result_data">
-		<div class="result_data_line not_people">13 rows did not appear to be people, or had errors. <a href="#">See rows</a></div>
+		<div class="result_data_line not_people">{{data_import.num_errors|intcomma}} rows did not appear to be {{data_import.import_type}}, or had errors. <a href="#">See rows</a></div>
 		</div>
 	</div>
 	{# <div class="fields_report"> #}
