--- a/mycelium/apps/data_import/templates/data_import/base.html
+++ b/mycelium/apps/data_import/templates/data_import/base.html
@@ -2,3 +2,6 @@
 {% block css %}{{block.super}}
 	{% css "css/import.css" %}
 {% endblock %}
+{% block javascript %}{{block.super}}
+	{% js "/js/mycelium/data_import.js"%}
+{% endblock %}
