sel tests for uploading may not be possible.

--- a/mycelium/apps/data_import/templates/data_import/list.html
+++ b/mycelium/apps/data_import/templates/data_import/list.html
@@ -42,7 +42,7 @@ $(function(){
 <page_title>Data Import History</page_title>
 
 <record_list>
-<a href="{% url data_import:start %}" class="mycelium_btn">Start New Import</a>
+<a href="{% url data_import:start %}" class="mycelium_btn start_import_btn">Start New Import</a>
 
 
 <table class="striped data_import_history_table record_table">
