--- a/mycelium/apps/data_import/templates/data_import/start.html
+++ b/mycelium/apps/data_import/templates/data_import/start.html
@@ -187,7 +187,7 @@
 	<instruction>Click Start Import, and give the GoodCloud robots a minute!</instruction>
 	<pre_step_content>Finish 1-3, then you're ready to go!</pre_step_content>
 	<step_content style="display: none;">	
-	<input type="submit"  class="mycelium_btn mycelium_grey" value="Start Import" />
+	<input type="submit"  class="mycelium_btn mycelium_grey submit_and_start_import_btn" value="Start Import" />
 	</step_content>
 	</active_step_content>
 </step>
