comment out errors spot

--- a/mycelium/apps/data_import/templates/data_import/start.html
+++ b/mycelium/apps/data_import/templates/data_import/start.html
@@ -186,6 +186,10 @@
 	</table>
 	</div>
 	<div class="more_rows_info"></div>
+	<div class="field_selection_errors">
+		{# <ul> #}
+		{# </ul> #}
+	</div>
 	</step_content>
 	</active_step_content>
 </step>
