changed spreadsheet message

--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% block breadcrumb %}{% endblock %}
 {% block page_content %}
-<coming_soon>We're not quite done with spreadsheets yet, but they'll be ready to go by June 1!</coming_soon>
+<coming_soon>We're not quite done with spreadsheets yet, but they'll be ready to go soon!</coming_soon>
 <div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}" />Saved Spreadsheets</div>
 
 <div class="report_list">
